# FlowTreeSolver

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FTSolver.cpp  FTSolver.h  FlowTreeJNI.cpp  FlowTreeJNI.h  board.cpp  board.h  preprocessing.cpp  preprocessing.h
app/src/main/cpp/minisat/utils/: Options.cc  Options.h
app/src/main/java/com/image/magick/flowtreesolver/: MainActivity.java  SolutionActivity.java  Utils.java
app/src/main/res/layout/: activity_main.xml  activity_solution.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: filepaths.xml
gradle/wrapper/: gradle-wrapper.properties
